# roll-and-earn

./: .gitignore  README.md  package.json
Anchor/: .gitignore  Anchor.toml  Cargo.toml  package.json  test_ata.js  tsconfig.json  upload_to_ipfs.js
Anchor/metadata/: README.md  item_armor.json  item_weapon.json  mage.json  rogue.json  warrior.json
Anchor/migrations/: deploy.ts
Anchor/programs/roll_and_earn/: Cargo.toml
Anchor/programs/roll_and_earn/src/: lib.rs
Anchor/scripts/: build-init-tx.ts  derive-pdas.ts  init-game.js  init-game.ts
Anchor/tests/: roll_and_earn.ts
Anchor/win-scripts/: init-game.js
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/Editor/: FontSetup.cs  RollAndEarnSetup.cs
Assets/Resources/RollAndEarn/: DarkDungeon.asset  DragonsLair.asset  EnchantedForest.asset  GameConfig.asset  Mage.asset  Rogue.asset  Warrior.asset
Assets/Scenes/: MainScene.unity  SceneOne.unity  SceneThree.unity  SceneTwo.unity
Assets/Scripts/: ClickDispatcher.cs  GameConfig.cs  GameConfigProvider.cs  ScreenManager.cs  SimpleUIBootstrap.cs
Assets/Scripts/Core/: AnchorClient.cs  NFTManager.cs  New Game Config.asset  SolanaManager.cs  SoundManager.cs  TokenManager.cs
Assets/Scripts/GameLogic/: AdventureManager.cs  CooldownManager.cs  RewardCalculator.cs
Assets/Scripts/Models/: AdventureConfigSO.cs  CharacterClassSO.cs  CharacterData.cs  ItemData.cs  PlayerProfile.cs  RollResult.cs
Assets/Scripts/UI/Components/: CardView.cs  (+5 more)
Assets/Scripts/Utils/: CoroutineUtils.cs  IPFSLoader.cs  JsonParser.cs
ProjectSettings/: ProjectSettings.asset
(+11 files in other folders)
