[package]
name = "roll_and_earn"
version = "0.1.0"
description = "Roll&Earn - Solana Play-to-Earn Game Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "roll_and_earn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
